<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="retry">Retry</string>
    <string name="conferences">Synchronisation</string>
    <string name="synchro_failed">Data synchronisation failed</string>
    <string name="action_bar_note">Notes</string>
    <string name="action_note">Edit note</string>
    <string name="memo_saved">Memo saved</string>
    <string name="memo">Memo</string>
    <string name="markdown_allowed">Markdown allowed</string>
    <string name="action_send">Send</string>
    <string name="cannot_send_email">No mail client found</string>
    <string name="send_memo_via">Send memo by</string>
    <string name="authors">Authors</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name" translatable="false">XebiCon\'16</string>
    <string name="action_bar_default_title" translatable="false">XebiCon\'16</string>
    <string name="scan_nfc_hint">Scan your NFC tag</string>
    <string name="twitter_account">Twitter</string>
    <string name="initial_synchro">Synchronization running</string>
    <string name="initial_synchro_conferences">Conferences download</string>
    <string name="no_data">No data</string>
    <string name="schedule">My schedule</string>
    <string name="speakers">Speakers</string>
    <string name="schedule_format"><![CDATA[%1$s<br><font color="#696969"><small>%2$s</small></font>]]></string>
    <string name="speaker_format"><![CDATA[%1$s %2$s<br><font color="#696969"><small>%3$s</small></font>]]></string>
    <string name="track_format"><![CDATA[%1$s<br><font color="#696969"><small>%2$d présentations</small></font>]]></string>
    <string name="speaker_format_without_company"><![CDATA[%1$s %2$s]]></string>
    <string name="speaker_details_format_with_twitter_without_company"><![CDATA[%1$s %2$s<br><font color="#4099FF"><small/>%3$s</small></font>]]></string>
    <string name="speaker_details_format_with_twitter"><![CDATA[%1$s %2$s<br><small><font color="#696969">%3$s | </font><font color="#4099FF">%4$s</font></small>]]></string>
    <string name="speaker_details_format"><![CDATA[%1$s %2$s<br><font color="#696969"><small>%3$s</small></font>]]></string>
    <string name="informations">Informations</string>
    <string name="summary">Description</string>
    <string name="talks">Presentations</string>
    <string name="my_votes">My ratings</string>
    <string name="xebia">Xebia</string>
    <string name="talk">Presentation</string>
    <string name="talk_details">Presentation details</string>
    <string name="track">Track</string>
    <string name="speaker_details">Speaker details</string>
    <string name="speaker_bio">Bio</string>
    <string name="error_loading_votes">Ratings update failed</string>
    <string name="action_refresh_votes">Update ratings</string>
    <string name="data_updated">Data up to date</string>
    <string name="no_vote">No ratings found</string>
    <string name="no_favorite_talk">No favorites</string>
    <string name="my_favorites">Favorites</string>
    <string name="action_favorite">Favorites management</string>
    <string name="added_to_favorites">Presentation added to favorites</string>
    <string name="removed_from_favorites">Presentation removed from favorites</string>
    <string name="no_talk_details">No description</string>
    <string name="error_loading_conferences">Impossible to load conferences</string>
    <string name="conferences_not_fetched">Impossible to update conferences</string>
    <string name="general">General</string>
    <string name="bluetooth_le_location">Geofencing</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="informations_ble">This application use geofencing through Bluetooth LE. You can disable this option in settings</string>
    <string name="add_to_schedule">Add to schedule</string>
    <string name="browse_sessions">Browse sessions</string>
    <string name="session_finished">Finished</string>
    <string name="session_now">Now</string>
    <string name="my_schedule_end_time">to <xliff:g id="endTime">%1$s</xliff:g></string>
    <string name="my_schedule">My schedule</string>
    <string name="all_talks">All talks</string>
    <string name="all_days">All days</string>
    <string name="all_topics">All topics</string>
    <string name="all_types">All types</string>
    <string name="days">Days</string>
    <string name="topics">Topics</string>
    <string name="types">Types</string>
    <string name="schedule_conflict_with_previous">(Conflict)</string>
    <string name="ended">Ended</string>
    <string name="talks_ended">Ended talks</string>
    <string name="no_talks">No talks</string>
    <string name="session_notification_text">starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</string>
    <string name="scheduled_talk_notification_ticker">1 session is about to start.</string>
    <string name="my_rating">My rating</string>
    <string name="feedback_notification">Give your feedback</string>
    <string name="action_ask">Ask a question</string>
    <string name="timeline_empty">No timeline</string>
    <string name="timeline">News Xebia</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="input_qr_code">Enter QR code manually</string>
    <string name="input_qr_code_title">Enter QR code</string>
    <string name="scan_qr_code_required">You need to scan your QR code to vote</string>
    <string name="able_to_rate">Now you\'ll be able to rate a session when It\'s over</string>
    <string name="not_able_to_rate">You need to scan your QR code to rate a session</string>
    <string name="floor_plan">Floor plan</string>
    <string name="error_loading_conference">Failed to load conference</string>
    <string name="too_early_to_vote">Too early to vote for this presentation</string>
    <string name="nav_schedule">My Schedule</string>
    <string name="nav_talks">Talks</string>
    <string name="nav_speakers">Speakers</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_timeline">News Xebia</string>
    <string name="vote_for_talk">Submit Feedback</string>

    <plurals name="available_talks">
        <item quantity="zero">%1$d talk available</item>
        <item quantity="one">%1$d talk available</item>
        <item quantity="other">%1$d talks available</item>
    </plurals>
    <string name="session_feedback_advanced">Too advanced</string>
    <string name="session_feedback_basic">Too basic</string>
    <string name="session_feedback_content">The content was :</string>
    <string name="session_feedback_great">Awesome</string>
    <string name="session_feedback_notgreat">Not so awesome</string>
    <string name="session_feedback_notrel">Not relevant</string>
    <string name="session_feedback_other">Anything else we should know ?</string>
    <string name="session_feedback_outstanding">Outstanding</string>
    <string name="session_feedback_poor">Poor</string>
    <string name="session_feedback_rel">Relevant</string>
    <string name="session_feedback_relevance">How relevant was this session to your projects ?</string>
    <string name="session_feedback_speaker_quality">Speakers quality :</string>
    <string name="session_feedback_submitlink">Submit feedback</string>
    <string name="session_feedback_tell_us">Tell us!</string>
    <string name="session_rating_label">Rate this session overall :</string>
    <string name="rating_title">Session Feedback</string>
    <string name="rate_is_mandatory">Rate is mandatory</string>
    <string name="nav_map">Map</string>
    <string name="nav_video">Video library</string>
    <string name="youtube_not_installed">Youtube is not installed</string>
    <string name="message_hint">Hey !</string>
    <string name="message_empty_instance"><![CDATA[<p>Retrieve soon XebiCon\'s videos on website xebicon.fr.</p><p>To be informed, follow us on Twitter (@XebiaFr) !</p>]]></string>
    <string name="developers">Developers</string>
    <string name="nav_experts">One to One</string>
    <string name="nav_about">About</string>
    <string name="about_content"><![CDATA[<p>This event, organized by Xebia and the Alliance, has been created to share our expertise acquired in our missions and in our monthly XKE (Xebia Knowledge Exchange).</p><p>Xebia is an IT consulting company specialised in Big Data, Web, Java and mobility technologies with agile methodes.<br/>The Alliance is an ecoystem of complementary companies, experts on their domains. These 7 compagnies have many skills to organize efficient and coherent digital strategies equally technological, functionals or methodological.</p><p>Contact us :<br/>Phone : +33 (0)1 53 89 99 99<br/>Email : info@xebia.fr<br/>Address : 156 Boulevard Haussmann, Paris 75008</p>]]></string>
    <string name="experts_content"><![CDATA[<p>Our technical experts are available to answer any of your questions on a one to one basis.</p><p>During 10 minutes, you will have the opportunity to ask your questions on a one on basis with our experts ! Data, Mobile, Agile, Web, DevOps, Cloud, Front-end, Back-end, IoT !</p><p><b>You just have to take an \"appointment\" with our staff (purple shirt).</b></p>]]></string>
    <string name="expert_people">40 experts</string>
    <string name="expert_theme">9 themes</string>
    <string name="expert_place">1 place</string>
    <string name="nav_keynote">Keynote</string>
    <string name="keynote_is_starting">Keynote will start!</string>
    <string name="keynote_confirm">Do you want to participate?</string>
    <string name="keynote_confirm_accept" >Let\'s go !</string>
    <string name="keynote_confirm_refuse">No...</string>
</resources>
