<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_general">
        <item
            android:id="@+id/nav_myschedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/nav_schedule"/>

        <item
            android:id="@+id/nav_talks"
            android:icon="@drawable/ic_action_talk"
            android:title="@string/nav_talks"/>

        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/ic_action_speakers"
            android:title="@string/nav_speakers"/>

        <item
            android:id="@+id/nav_keynote"
            android:icon="@drawable/ic_drawer_experts"
            android:title="@string/nav_keynote"/>

    </group>

    <group
        android:id="@+id/nav_group_others">
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_action_video"
            android:title="@string/nav_video"/>

        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_action_social"
            android:title="@string/nav_timeline"/>
    </group>

    <group
        android:id="@+id/nav_group_settings">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_drawer_about"
            android:title="@string/nav_about"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/nav_settings"/>
    </group>
</menu>