<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/session_title"
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Q0 -->
            <TextView
                style="@style/FeedbackQuestion"
                android:text="@string/session_rating_label"
                android:textAlignment="viewStart"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <RatingBar
                    android:id="@+id/rating_bar_0"
                    style="@style/FeedbackRatingBar"/>

                <TextView
                    style="@style/FeedbackQuestionGuideText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/rating_bar_0"
                    android:layout_below="@id/rating_bar_0"
                    android:text="@string/session_feedback_notgreat"/>

                <TextView
                    style="@style/FeedbackQuestionGuideText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/rating_bar_0"
                    android:layout_below="@id/rating_bar_0"
                    android:text="@string/session_feedback_great"/>
            </RelativeLayout>

            <!-- Q1 -->
            <TextView
                style="@style/FeedbackQuestion"
                android:text="@string/session_feedback_relevance"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <fr.xebia.xebicon.ui.rating.NumberRatingBar
                    android:id="@+id/rating_bar_1"
                    style="@style/FeedbackNumberRatingBar"/>

                <TextView
                    style="@style/FeedbackQuestionGuideText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/rating_bar_1"
                    android:layout_below="@id/rating_bar_1"
                    android:text="@string/session_feedback_notrel"/>

                <TextView
                    style="@style/FeedbackQuestionGuideText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/rating_bar_1"
                    android:layout_below="@id/rating_bar_1"
                    android:text="@string/session_feedback_rel"/>
            </RelativeLayout>

            <!-- Q2 -->
            <TextView
                style="@style/FeedbackQuestion"
                android:text="@string/session_feedback_content"/>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <fr.xebia.xebicon.ui.rating.NumberRatingBar
                    android:id="@+id/rating_bar_2"
                    style="@style/FeedbackNumberRatingBar"/>

                <TextView
                    style="@style/FeedbackQuestionGuideText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/rating_bar_2"
                    android:layout_below="@id/rating_bar_2"
                    android:text="@string/session_feedback_basic"/>

                <TextView
                    style="@style/FeedbackQuestionGuideText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/rating_bar_2"
                    android:layout_below="@id/rating_bar_2"
                    android:text="@string/session_feedback_advanced"/>
            </RelativeLayout>

            <!-- Q3 -->
            <TextView
                style="@style/FeedbackQuestion"
                android:text="@string/session_feedback_speaker_quality"/>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <fr.xebia.xebicon.ui.rating.NumberRatingBar
                    android:id="@+id/rating_bar_3"
                    style="@style/FeedbackNumberRatingBar"/>

                <TextView
                    style="@style/FeedbackQuestionGuideText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/rating_bar_3"
                    android:layout_below="@id/rating_bar_3"
                    android:text="@string/session_feedback_poor"/>

                <TextView
                    style="@style/FeedbackQuestionGuideText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/rating_bar_3"
                    android:layout_below="@id/rating_bar_3"
                    android:text="@string/session_feedback_outstanding"/>
            </RelativeLayout>

            <TextView
                style="@style/FeedbackQuestion"
                android:text="@string/session_feedback_other"/>

            <EditText
                android:id="@+id/session_feedback_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginTop="8dp"
                android:hint="@string/session_feedback_tell_us"
                android:inputType="textCapSentences"
                android:minLines="1"
                android:scrollbars="vertical"/>
        </LinearLayout>

        <!-- Submit button -->

        <FrameLayout
            android:id="@+id/submit_feedback_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/colorPrimary"
            android:clickable="true"
            android:contentDescription="@string/session_feedback_submitlink"
            android:focusable="true"
            android:foreground="?photoItemForeground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_submit_feedback"
                android:drawablePadding="8dp"
                android:fontFamily="@string/font_fontFamily_medium"
                android:gravity="center_vertical"
                android:paddingRight="20dp"
                android:text="@string/session_feedback_submitlink"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="@dimen/text_size_medium"/>
        </FrameLayout>
    </LinearLayout>
</ScrollView>

